<resources>
    <string name="app_name">Principia</string>
    <string name="initial_dir">Initial Direction</string>
    <string name="dir_right">Right</string>
    <string name="random">Random</string>
    <string name="dir_left">Left</string>
    <string name="default_state">Default state</string>
    <string name="faction">Faction</string>
    <string name="friendly">Friendly</string>
    <string name="neutral">Neutral</string>
    <string name="enemy">Enemy</string>
    <string name="chaotic">Chaotic</string>
    <string name="idle">Idle</string>
    <string name="walking">Walking</string>
    <string name="dead">Dead</string>
    <string name="roaming">Roaming</string>
    <string name="command">Command</string>
    <string name="wrap_around">Wrap around</string>
    <string name="remove">Remove</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delim">/</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_requirements">Min frequency: 0 Max frequency: 4,294,967,295</string>
    <string name="frequency_start">Frequency start</string>
    <string name="frequency_range">Frequency range</string>
    <string name="insert">Insert</string>
    <string name="append">Append</string>
    <string name="object_name">Object name</string>
    <string name="info">Info</string>
    <string name="world">World</string>
    <string name="gameplay">Gameplay</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="background">Background</string>
    <string name="gravity_x">Gravity X</string>
    <string name="horizontal_gravity">Horizontal gravity</string>
    <string name="gravity_y">Gravity Y</string>
    <string name="vertical_gravity">Vertical gravity</string>
    <string name="final_score">Final score</string>
    <string name="level_type">Level type</string>
    <string name="level_type_adventure">Adventure</string>
    <string name="level_type_custom">Custom</string>
    <string name="disable_layer_switch">Disable layer switch</string>
    <string name="disable_interactive">Disable interactive</string>
    <string name="pause_on_win">Pause on win</string>
    <string name="display_score">Display score</string>
    <string name="disable_static_connections">Disable static connections</string>
    <string name="disable_jumping">Disable jumping</string>
    <string name="disable_fall_damage">Disable fall damage</string>
    <string name="disable_connections">Disable connections</string>
    <string name="disable_cam_movement">Disable cam movement</string>
    <string name="disable_initial_wait">Disable initial wait</string>
    <string name="disable_robot_hit_score">Disable robot hit score</string>
    <string name="disable_zoom">Disable zoom</string>
    <string name="absorb_dead_enemies">Absorb dead enemies</string>
    <string name="snap_by_default">Snap by default</string>
    <string name="unlimited_enemy_vision">Unlimited enemy vision</string>
    <string name="interactive_destruction">Interactive destruction</string>
    <string name="disable_damage">Disable damage</string>
    <string name="single_layer_explosions">Single-layer explosions</string>
    <string name="disable_continue_button">Disable continue button</string>
    <string name="hide_beam_connections">Hide beam connections</string>
    <string name="level_version">Level version</string>
    <string name="bottom_border_explanation">TODO</string>
    <string name="left_border_explanation">TODO</string>
    <string name="right_border_explanation">TODO</string>
    <string name="top_border_explanation">TODO</string>
    <string name="left_border">Left border</string>
    <string name="right_border">Right border</string>
    <string name="top_border">Top border</string>
    <string name="bottom_border">Bottom border</string>
    <string name="position_iterations">Position iterations</string>
    <string name="velocity_iterations">Velocity iterations</string>
    <string name="iterations_warning">It is recommended that you set the number of iterations as low as possible, as it will allow players with less powerful devices to play your level.</string>
    <string name="autofit_borders">Auto-fit borders</string>
    <string name="seconds">Seconds</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="num_ticks">Num ticks</string>
    <string name="num_ticks_descr">0 = Infinite ticks</string>
    <string name="high">High</string>
    <string name="presets">Presets</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="ambient_occlusion">Ambient occlusion</string>
    <string name="enable_shadows">Enable shadows</string>
    <string name="NA">N/A</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="graph">Graph (may drain FPS)</string>
    <string name="shadow_res">Shadow resolution</string>
    <string name="shadow_softness">Shadow softness</string>
    <string name="sharp">Sharp</string>
    <string name="soft">Soft</string>
    <string name="locked">Locked</string>
    <string name="locked_description">Disallow players from seeing or playing this level outside of packages.</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="dont_show_again">Don\'t show this dialog again</string>
    <string name="disable_3rd_layer">Disable third layer</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_limits">Your password must contain a minimum of 6 characters.</string>
    <string name="email">Email address</string>
    <string name="register_account">Register new account</string>
    <string name="register_account_description">Register a new account to access the community site.</string>
    <string name="uiscale">UI Scale</string>
    <string name="uiscale_description">This option requires a full restart to take effect.</string>
    <string name="button_1">Button #1</string>
    <string name="button_2">Button #2</string>
    <string name="button_3">Button #3</string>
    <string name="prompt_button_description">Leave the button text empty to disable the button.</string>
    <string name="prompt_message">Enter the prompt message here.</string>
    <string name="alpha">Alpha</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="disable_camera_rc_snap">Disable RC camera snap</string>
    <string name="portrait_mode">Portrait mode</string>
    <string name="disable_physics">Disable physics</string>
    <string name="zero">0</string>
    <string name="color_preview">Color preview</string>
    <string name="cam_speed">Camera swipe speed</string>
    <string name="zoom_speed">Zoom speed</string>
    <string name="smooth_cam">Smooth camera</string>
    <string name="smooth_zoom">Smooth zoom</string>
    <string name="step_width">Step width</string>
    <string name="sequence">Sequence</string>
    <string name="sequence_description">Enter a sequence of zeros and ones to specify what the sequencer should output at the given step.</string>
    <string name="value">Value</string>
    <string name="do_not_require_dragfield">Do not require dragfield</string>
    <string name="published_successfully_message_p1">Your level has been successfully published on the community website.</string>
    <string name="published_successfully_message_p2">To view your level, or to submit it to a running contest, please click the button below.</string>
    <string name="go_to_level_page">Go to level page</string>
    <string name="cancel">Cancel</string>
    <string name="published_successfully">Published Successfully!</string>
    <string name="enable_border_scroll">Enable border scrolling</string>
    <string name="border_scroll_speed">Border scroll speed</string>
    <string name="code">insert_code_here();</string>
    <string name="save">Save</string>
    <string name="quickadd">Object name (will add to center of screen)</string>
    <string name="confirm_level_upgrade"><b>Are you sure you want to upgrade the version of this level?</b>\n\nTo get access to new features the version associated with this level must be upgraded. This action can not be undone. Please save a copy before upgrading your level.\n\nBy upgrading this level, some object properties such as density, restitution, friction and applied forces might differ from earlier versions and affect how your level is simulated.</string>
    <string name="confirm_cancel_script_dialog">Are you sure you want to cancel the LuaScript dialog? Any unsaved changes will be lost!</string>
    <string name="close">Close</string>
    <string name="display_object_id">Display object IDs</string>
    <string name="loading">Loading…</string>
    <string name="prismatic_tolerance">Prismatic tolerance</string>
    <string name="pivot_tolerance">Pivot tolerance</string>
    <string name="ok">OK</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="left">Left</string>
    <string name="down">Down</string>
    <string name="disable_robot_special_action">Disable robot boxing</string>
    <string name="disable_adventure_max_zoom">Disable adventure zoom constraints</string>
    <string name="reload">Reload</string>
    <string name="disable_roam_layer_switch">Disable roam layer switch</string>
    <string name="use_system_time">Use system time</string>
    <string name="chunked_level_loading">Chunked level loading</string>
    <string name="disable_caveview">Disable caveview</string>
    <string name="disable_rocket_trigger_explosives">Disable rocket trigger explosives</string>
    <string name="background_color">Background color</string>
    <string name="color">Color</string>
    <string name="recipes">Recipes</string>
    <string name="resources">Resources</string>
    <string name="recipe_explanation">This is the list of recipes that you can craft via the factory inputs.</string>
    <string name="display_grapher_value">Display grapher value</string>
    <string name="display_wireless_frequency">Display wireless frequency</string>
    <string name="mute_all_sound">Mute all sounds</string>
    <string name="volume">Volume</string>
    <string name="open_save">Open save</string>
    <string name="restart_level">Restart level</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="back_to_sandbox">Back to sandbox</string>
    <string name="back_to_community">Back to community</string>
    <string name="allow_high_score_submissions">Allow high score submissions</string>
    <string name="allow_quicksaving">Allow quicksaving</string>
    <string name="allow_respawn_without_checkpoint">Allow respawn without checkpoint</string>
    <string name="store_score_on_game_over">Store high score on game over</string>
    <string name="disable_endscreens">Disable end-screens</string>
    <string name="lower_score_is_better">Lower score is better</string>
    <string name="save_state">Save state</string>
    <string name="dead_creature_destruction">Allow creature corpse destruction</string>
    <string name="state">State</string>
    <string name="equipment">Equipment</string>
    <string name="head_equipment">Head equipment</string>
    <string name="head">Head</string>
    <string name="back_equipment">Back equipment</string>
    <string name="front_equipment">Front equipment</string>
    <string name="feet">Feet</string>
    <string name="bolt_set">Bolt set</string>
    <string name="weapons">Weapons</string>
    <string name="tools">Tools</string>
    <string name="circuits">Circuits</string>
    <string name="hide_tips">Hide tips</string>
    <string name="sandbox_back_dna">Do not ask when quitting sandbox level</string>
    <string name="display_fps">Display FPS</string>
</resources>