<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:divider="@drawable/div"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:showDividers="middle" >

    <LinearLayout
        android:id="@+id/settings_buttonbar"
        style="@style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/settings_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/settings_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

    <ScrollView
        style="@style/ScrollViewBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/settings_buttonbar" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presets"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp" >

                <Button
                    android:id="@+id/btn_preset_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/low" />

                <Button
                    android:id="@+id/btn_preset_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/medium" />

                <Button
                    android:id="@+id/btn_preset_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/high" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <SeekBar
                    android:id="@+id/seekbar_volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100" />

                <TextView
                    android:id="@+id/curr_volume"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/NA"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox_muted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mute_all_sound" />

            <CheckBox
                android:id="@+id/checkbox_enableshadows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_shadows" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shadow_res"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <SeekBar
                    android:id="@+id/seekbar_shadowresolution"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="5" />

                <TextView
                    android:id="@+id/curr_res"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/NA"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shadow_softness"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <SeekBar
                    android:id="@+id/seekbar_shadowsoftness"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="1" />

                <TextView
                    android:id="@+id/curr_softness"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/NA"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ambient_occlusion"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radiogroup_ao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rg_values_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/off" />

                <RadioButton
                    android:id="@+id/rg_values_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low" />

                <RadioButton
                    android:id="@+id/rg_values_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium" />

                <RadioButton
                    android:id="@+id/rg_values_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uiscale"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <SeekBar
                    android:id="@+id/settings_uiscale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="15" />

                <TextView
                    android:id="@+id/tv_uiscale"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/NA"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uiscale_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <CheckBox
                android:id="@+id/settings_smooth_cam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smooth_cam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cam_speed"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <SeekBar
                    android:id="@+id/settings_cam_speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="27" />

                <TextView
                    android:id="@+id/settings_cam_speed_tv"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/NA"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/settings_smooth_zoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smooth_zoom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zoom_speed"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <SeekBar
                    android:id="@+id/settings_zoom_speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="27" />

                <TextView
                    android:id="@+id/settings_zoom_speed_tv"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/NA"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/settings_border_scroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_border_scroll" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/border_scroll_speed"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <SeekBar
                    android:id="@+id/settings_border_scroll_speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="10" />

                <TextView
                    android:id="@+id/settings_border_scroll_speed_tv"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/NA"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/settings_display_object_ids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_object_id" />

            <CheckBox
                android:id="@+id/settings_display_grapher_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_grapher_value" />

            <CheckBox
                android:id="@+id/settings_display_wireless_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_wireless_frequency" />

            <CheckBox
                android:id="@+id/settings_hide_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide_tips" />

            <CheckBox
                android:id="@+id/settings_sandbox_back_dna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sandbox_back_dna" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/display_fps"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/rg_fps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <RadioButton
                    android:id="@+id/rg_fps_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/off" />

                <RadioButton
                    android:id="@+id/rg_fps_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on" />

                <RadioButton
                    android:id="@+id/rg_fps_graph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph" />
            </RadioGroup>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
